# watsonx-orchestrate-developer-toolkit

./: README.md
agent_knowledge/elasticsearch-install-and-setup/: ICD_Elasticsearch_install_and_setup.md  README.md  federated_search.md  how_to_configure_advanced_elasticsearch_settings.md  how_to_index_pdf_and_office_documents_elasticsearch.md  how_to_use_web_crawler_in_elasticsearch.md  text_embedding_deploy_and_use.md  watsonx_discovery_install_and_setup.md
agent_knowledge/elasticsearch-install-and-setup/python-document-ingestion/: README.md
agent_knowledge/search-with-astradb-langflow/: search-with-astradb-langflow.md
agent_knowledge/search-with-elasticsearch/: watsonx_discovery_install_and_setup.md
agent_knowledge/search-with-milvus/: search-with-watsonx-data-milvus.md  setup_milvus_access_control.md
agent_knowledge/search-with-milvus/examples/: index-with-milvus.py
external_agent/: README.md  spec.yaml
external_agent/examples/agent_builder/: .dockerignore  README.md  app.py  models.py  requirements.txt  security.py  utils.py
external_agent/examples/agent_lab/: README.md  utils.py
external_agent/examples/beeai_framework_python/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
external_agent/examples/beeai_framework_python/beeai_python/: agent.py  app.py  models.py  settings.py  tools.py  utils.py
external_agent/examples/langgraph_python/: README.md  app.py  config.py  llm_utils.py  models.py  requirements.txt  security.py  token_utils.py  tools.py
external_agent/examples/wx_ai_external_agent_registration/: README.md
