[project]
name = "beeai-wxo-python-example"
version = "0.0.1"
description = "BeeAI in WXO"
authors = [
    {name = "Tomas Dvorak",email = "tomas.dvorak@ibm.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beeai-framework (>=0.1.25,<0.2.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "janus (>=2.0.0,<3.0.0)",
    "litellm (>=1.69.0,<1.70.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sse-starlette (>=2.3.6,<3.0.0)",
    "tavily-python (>=0.7.7,<0.8.0)",
    "uuid (>=1.30,<2.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
